2002-06-12  Junichi Uekawa  <dancer@debian.org>

	* configure.in: version 0.0.19.1

	* autogen.sh: add --force

	* dsh.c (do_echoing_back): add a missing free for buf,
	thanks to: Petter Reinholdtsen <pere@hungry.com>

	* configure.in: version 0.0.19.0

	* Makefile.am: update prinstine-source generator/Debian 

2002-06-01  Junichi Uekawa  <dancer@debian.org>


	* dsh.c (do_execute_with_optional_pipe): use PACKAGE instead of PROGRAM_NAME
	(do_execute_with_optional_pipe): 

	* parameter.c (read_machinelist): 
	* parameter.c (load_configfile): ditto

	* configure.in: add AM_MAINTAINER_MODE

	* dsh.h (DSH_CONF): remove PROGRAM_NAME

2002-05-31  Junichi Uekawa  <dancer@debian.org>

	* configure.in: change version number to 0.0.19pre

	* Makefile.am (../@PACKAGE@_@VERSION@.orig.tar.gz): fix the target not to overwrite pristine upstream tarball.

	* configure.in: fix typo in package name.

	* Makefile.am (dsh_SOURCES): fix Make rule to allow distcheck to succeed.

	* debian/changelog: make it a non-native package.

	* Makefile.am, configure.in, autogen.sh: added

	* debian/rules (configure-stamp): remove reference to dshversion.h

	* parameter.c: use VERSION instead of DSH_VERSION

2002-05-26  Junichi Uekawa  <dancer@debian.org>

	* TODO: update TODO, with notes on bug.

2002-05-16  Junichi Uekawa  <dancer@debian.org>

	* parameter.c (read_machinelist): minor cosmetic fix.
	if alternatelistfile is NULL, do not try to display it in error 
	message.

2002-04-20  Junichi Uekawa  <dancer@debian.org>

	* debian/control (Build-Depends): remove libtool dependency.

	* Makefile (install): updated to remove libtool reference.

	* debian/control (Build-Depends): add build-depends on libtool.

	* Makefile: removed libdshconfig trace

	* debian/rules (clean): remove libdshconfig trace.

	* move libdshconfig from dsh source to separate package

2002-03-31  Junichi Uekawa  <dancer@debian.org>

	* libdshconfig.c (free_dshconfig): free the title and data for each item, fix memleak.
