@@ -24,8 +24,8 @@
 #include <stdio.h>
 #include <string.h>
 #include <unistd.h>
+#include <config.h>
 #include "dsh.h"
-#include "config.h"
 #include "linkedlist.h"
 
 static void * 
